--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<input type="text" placeholder="请输入备忘录" v-model="inputValue" @keyup.enter="add"/>
 			<ul>
 				<li class="ite" v-for="(item,index) in list">{{index+1}}. {{item}}<span class="del" @click="del(index)">+</span></li>
-				<li class="aco">{{list.length}} items left<span @click="clear">clearAll</span></li>
+				<li class="aco" v-show="empty">{{list.length}} items left<span @click="clear">clearAll</span></li>
 			</ul>
 		</div>
 	</body>
@@ -20,17 +20,23 @@
 			el:"#main",
 			data: {
 				list:['写代码','吃饭','睡觉'],
-				inputValue:""
+				inputValue:"",
+				empty:true
 			},
 			methods:{
 				del:function(index){
 					this.list.splice(index,1);
+					if(this.list.length==0){
+						this.empty=false;
+					}
 				},
 				add:function(){
 					this.list.push(this.inputValue);
+					this.empty=true;
 				},
 				clear:function(){
 					this.list=[];
+					this.empty=false;
 				}
 			}
 		})
